cambios y arreglos de rutas

--- a/nuestro-equipo.html
+++ b/nuestro-equipo.html
@@ -24,21 +24,21 @@
     <main class="main-content">
         <section class="team-section">
             <h1>Conoce a Nuestro Equipo</h1>
-            <p>Nuestro equipo está formado por ingenieros de software con especializaciones en tecnologías de vanguardia.</p>
+            [cite_start]<p>Nuestro equipo está formado por ingenieros de software con especializaciones en tecnologías de vanguardia[cite: 94, 95].</p>
             
             <div class="team-members">
                 <div class="member-card">
                     <img src="img/prod1.jpg" alt="Foto Juan Pérez" class="member-photo">
                     <h3>Ing. Juan Pérez</h3>
                     <p class="title">Especialista en Computación Cuántica</p>
-                    <p>Ingeniero de Software (Politécnico Grancolombiano) con especialización en computación cuántica de la Universidad de Harvard. Enfocado en la optimización de algoritmos.</p>
+                    [cite_start]<p>Ingeniero de Software del Politécnico Grancolombiano, especializado en computación cuántica en la Universidad de Harvard[cite: 89].</p>
                 </div>
                 
                 <div class="member-card">
                     <img src="img/prod1.jpg" alt="Foto Luisa Gómez" class="member-photo">
                     <h3>Ing. Luisa Gómez</h3>
                     <p class="title">Especialista en Sistemas Embebidos</p>
-                    <p>Ingeniera de Software (Politécnico Grancolombiano) con especialización en hardware y sistemas embebidos de la Universidad de Oxford. Lidera el desarrollo de consolas retro.</p>
+                    [cite_start]<p>Ingeniera de Software del Politécnico Grancolombiano, especializada en hardware y sistemas embebidos en la Universidad de Oxford[cite: 90].</p>
                 </div>
             </div>
         </section>
@@ -50,7 +50,7 @@
             <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
             <a href="#" aria-label="Google Maps"><i class="fas fa-map-marker-alt"></i></a>
         </div>
-        <p class="copyright">Copyright 2025. Diseñado por Chris</p>
+        [cite_start]<p class="copyright">Copyright 2025. Diseñado por Chris [cite: 92]</p>
     </footer>
 
     <script src="js/script.js"></script>
