--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <img src="img/prod1.jpg" alt="PC Gamer de muestra" class="main-image">
             
             <p>
-                Somos una empresa dedicada al desarrollo de diferentes servicios de tecnología como: ensambles de PCs corporativos, ensambles de PCs personales, diseño y venta de consolas retro mini, servidores para el hogar y desarrollo de páginas web para negocios. Estos servicios tendrán la capacidad de cambiar según las necesidades de la persona.
+                [cite_start]Somos una empresa dedicada al desarrollo de diferentes servicios de tecnología como: ensambles de PCs corporativos, ensambles de PCs personales, diseño y venta de consolas retro mini, servidores para el hogar y desarrollo de páginas web para negocios[cite: 12]. [cite_start]Estos servicios tendrán la capacidad de cambiar según las necesidades de la persona[cite: 20].
             </p>
         </section>
 
@@ -57,7 +57,7 @@
             <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
             <a href="#" aria-label="Google Maps"><i class="fas fa-map-marker-alt"></i></a>
         </div>
-        <p class="copyright">Copyright 2025. Diseñado por Chris</p>
+        [cite_start]<p class="copyright">Copyright 2025. Diseñado por Chris [cite: 14]</p>
     </footer>
 
     <script src="js/script.js"></script>
