--- a/servicios.html
+++ b/servicios.html
@@ -31,25 +31,25 @@
                     <img src="img/prod1.jpg" alt="Servicio PCs" class="card-img">
                     <h3>Ensambles de PCs</h3>
                     <p>Armado de equipos corporativos y personales de alto rendimiento. Totalmente personalizable.</p>
-                    <a href="#" class="nav-button">Ver Detalles</a>
+                    <a href="detalle-servicio.html" class="nav-button">Ver Detalles</a>
                 </div>
                 <div class="service-card">
                     <img src="img/prod1.jpg" alt="Consolas Retro" class="card-img">
                     <h3>Consolas Retro Mini</h3>
                     <p>Diseño y venta de consolas compactas con emulación de juegos clásicos.</p>
-                    <a href="#" class="nav-button">Ver Detalles</a>
+                    <a href="detalle-consolas-retro.html" class="nav-button">Ver Detalles</a>
                 </div>
                 <div class="service-card">
                     <img src="img/prod1.jpg" alt="Servidores" class="card-img">
                     <h3>Servidores para el Hogar</h3>
                     <p>Configuración de servidores domésticos para almacenamiento, backups y automatización.</p>
-                    <a href="#" class="nav-button">Ver Detalles</a>
+                    <a href="detalle-servidores-hogar.html" class="nav-button">Ver Detalles</a>
                 </div>
                 <div class="service-card">
                     <img src="img/prod1.jpg" alt="Desarrollo Web" class="card-img">
                     <h3>Desarrollo Web</h3>
                     <p>Creación de páginas web profesionales para negocios y emprendimientos.</p>
-                    <a href="#" class="nav-button">Ver Detalles</a>
+                    <a href="detalle-desarrollo-web.html" class="nav-button">Ver Detalles</a>
                 </div>
             </div>
         </section>
@@ -61,7 +61,7 @@
             <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
             <a href="#" aria-label="Google Maps"><i class="fas fa-map-marker-alt"></i></a>
         </div>
-        <p class="copyright">Copyright 2025. Diseñado por Chris</p>
+        [cite_start]<p class="copyright">Copyright 2025. Diseñado por Chris [cite: 42]</p>
     </footer>
 
     <script src="js/script.js"></script>
