Cambios visuales, se añaden imágenes estáticas

--- a/detalle-desarrollo-web.html
+++ b/detalle-desarrollo-web.html
@@ -27,11 +27,11 @@
             
             <div class="product-box">
                 <div class="image-area">
-                    <img src="img/prod1.jpg" alt="Diseño de página web responsive" class="detail-main-img">
+                    <img src="img/desarrollo.jpg" alt="Diseño de página web responsive" class="detail-main-img">
                     <div class="thumbnails">
-                        <img src="img/prod1.jpg" alt="Miniatura 1" class="thumbnail-img">
-                        <img src="img/prod1.jpg" alt="Miniatura 2" class="thumbnail-img">
-                        <img src="img/prod1.jpg" alt="Miniatura 3" class="thumbnail-img">
+                        <img src="img/desarrollo.jpg" alt="Miniatura 1" class="thumbnail-img">
+                        <img src="img/desarrollo.jpg" alt="Miniatura 2" class="thumbnail-img">
+                        <img src="img/desarrollo.jpg" alt="Miniatura 3" class="thumbnail-img">
                     </div>
                 </div>
 
