--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
         <section class="hero">
             <h1>Bienvenidos a mi web de servicios</h1>
             
-            <img src="img/prod1.jpg" alt="PC Gamer de muestra" class="main-image">
+            <img src="img/startup.jpg" alt="PC Gamer de muestra" class="main-image">
             
             <p>
-                [cite_start]Somos una empresa dedicada al desarrollo de diferentes servicios de tecnología como: ensambles de PCs corporativos, ensambles de PCs personales, diseño y venta de consolas retro mini, servidores para el hogar y desarrollo de páginas web para negocios[cite: 12]. [cite_start]Estos servicios tendrán la capacidad de cambiar según las necesidades de la persona[cite: 20].
+                Somos una empresa dedicada al desarrollo de diferentes servicios de tecnología como: ensambles de PCs corporativos, ensambles de PCs personales, diseño y venta de consolas retro mini, servidores para el hogar y desarrollo de páginas web para negocios[cite: 12]. [cite_start]Estos servicios tendrán la capacidad de cambiar según las necesidades de la persona.
             </p>
         </section>
 
@@ -36,15 +36,15 @@
             <h2>Productos Destacados</h2>
             <span class="carousel-arrow">&lt;</span>
             <div class="product-item">
-                <img src="img/prod1.jpg" alt="Producto 1" class="item-img">
+                <img src="img/arqui.jpg" alt="Producto 1" class="item-img">
                 <p>PC Corporativa</p>
             </div>
             <div class="product-item">
-                <img src="img/prod1.jpg" alt="Producto 2" class="item-img">
+                <img src="img/retro.jpg" alt="Producto 2" class="item-img">
                 <p>Consola Retro</p>
             </div>
             <div class="product-item">
-                <img src="img/prod1.jpg" alt="Producto 3" class="item-img">
+                <img src="img/server1.jpg" alt="Producto 3" class="item-img">
                 <p>Servidor Doméstico</p>
             </div>
             <span class="carousel-arrow">&gt;</span>
@@ -57,7 +57,7 @@
             <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
             <a href="#" aria-label="Google Maps"><i class="fas fa-map-marker-alt"></i></a>
         </div>
-        [cite_start]<p class="copyright">Copyright 2025. Diseñado por Chris [cite: 14]</p>
+        <p class="copyright">Copyright 2025. Diseñado por Chris</p>
     </footer>
 
     <script src="js/script.js"></script>
