--- a/detalle-servidores-hogar.html
+++ b/detalle-servidores-hogar.html
@@ -27,11 +27,11 @@
             
             <div class="product-box">
                 <div class="image-area">
-                    <img src="img/prod1.jpg" alt="Servidor NAS para el hogar" class="detail-main-img">
+                    <img src="img/servidor.jpg" alt="Servidor NAS para el hogar" class="detail-main-img">
                     <div class="thumbnails">
-                        <img src="img/prod1.jpg" alt="Miniatura 1" class="thumbnail-img">
-                        <img src="img/prod1.jpg" alt="Miniatura 2" class="thumbnail-img">
-                        <img src="img/prod1.jpg" alt="Miniatura 3" class="thumbnail-img">
+                        <img src="img/servidor.jpg" alt="Miniatura 1" class="thumbnail-img">
+                        <img src="img/servidor.jpg" alt="Miniatura 2" class="thumbnail-img">
+                        <img src="img/servidor.jpg" alt="Miniatura 3" class="thumbnail-img">
                     </div>
                 </div>
 
