--- a/servicios.html
+++ b/servicios.html
@@ -28,25 +28,25 @@
             
             <div class="service-cards-container">
                 <div class="service-card">
-                    <img src="img/prod1.jpg" alt="Servicio PCs" class="card-img">
+                    <img src="img/pcensamble.jpg" alt="Servicio PCs" class="card-img">
                     <h3>Ensambles de PCs</h3>
                     <p>Armado de equipos corporativos y personales de alto rendimiento. Totalmente personalizable.</p>
                     <a href="detalle-servicio.html" class="nav-button">Ver Detalles</a>
                 </div>
                 <div class="service-card">
-                    <img src="img/prod1.jpg" alt="Consolas Retro" class="card-img">
+                    <img src="img/consola.jpg" alt="Consolas Retro" class="card-img">
                     <h3>Consolas Retro Mini</h3>
                     <p>Diseño y venta de consolas compactas con emulación de juegos clásicos.</p>
                     <a href="detalle-consolas-retro.html" class="nav-button">Ver Detalles</a>
                 </div>
                 <div class="service-card">
-                    <img src="img/prod1.jpg" alt="Servidores" class="card-img">
+                    <img src="img/servidor.jpg" alt="Servidores" class="card-img">
                     <h3>Servidores para el Hogar</h3>
                     <p>Configuración de servidores domésticos para almacenamiento, backups y automatización.</p>
                     <a href="detalle-servidores-hogar.html" class="nav-button">Ver Detalles</a>
                 </div>
                 <div class="service-card">
-                    <img src="img/prod1.jpg" alt="Desarrollo Web" class="card-img">
+                    <img src="img/desarrollo.jpg" alt="Desarrollo Web" class="card-img">
                     <h3>Desarrollo Web</h3>
                     <p>Creación de páginas web profesionales para negocios y emprendimientos.</p>
                     <a href="detalle-desarrollo-web.html" class="nav-button">Ver Detalles</a>
@@ -61,7 +61,7 @@
             <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
             <a href="#" aria-label="Google Maps"><i class="fas fa-map-marker-alt"></i></a>
         </div>
-        [cite_start]<p class="copyright">Copyright 2025. Diseñado por Chris [cite: 42]</p>
+        <p class="copyright">Copyright 2025. Diseñado por Chris</p>
     </footer>
 
     <script src="js/script.js"></script>
