Detalles finales entrega 2

--- a/detalle-servicio.html
+++ b/detalle-servicio.html
@@ -40,7 +40,7 @@
                     <p class="price">$12'000.000</p>
                     
                     <p class="description">
-                        Este poderoso PC está equipado con todo lo necesario para ofrecer el máximo rendimiento en desarrollo arquitectónico. [cite_start]Incluye licencia de 6 meses de AutoCAD[cite: 67, 79].
+                        Este poderoso PC está equipado con todo lo necesario para ofrecer el máximo rendimiento en desarrollo arquitectónico. Incluye licencia de 6 meses de AutoCAD.
                     </p>
                     
                     <div class="customization-group">
