--- a/nuestro-equipo.html
+++ b/nuestro-equipo.html
@@ -28,14 +28,14 @@
             
             <div class="team-members">
                 <div class="member-card">
-                    <img src="img/prod1.jpg" alt="Foto Juan Pérez" class="member-photo">
+                    <img src="img/inge.JPG" alt="Foto Christian" class="member-photo">
                     <h3>Ing. Christian Lancheros</h3>
                     <p class="title">Especialista en Computación Cuántica</p>
                     <p>Ingeniero de Software del Politécnico Grancolombiano, especializado en computación cuántica en la Universidad de Harvard.</p>
                 </div>
                 
                 <div class="member-card">
-                    <img src="img/prod1.jpg" alt="Foto Luisa Gómez" class="member-photo">
+                    <img src="img/inge2.jpg" alt="Foto David" class="member-photo">
                     <h3>Ing. David Martínez</h3>
                     <p class="title">Especialista en Sistemas Embebidos</p>
                     <p>Ingeniero de Software del Politécnico Grancolombiano, especializado en hardware y sistemas embebidos en la Universidad de Oxford.</p>
