--- a/servicios.html
+++ b/servicios.html
@@ -26,32 +26,9 @@
             <h1>Nuestros Servicios Tecnológicos</h1>
             <p>Ofrecemos soluciones tecnológicas a medida, desde hardware hasta desarrollo de software, adaptándonos a tus necesidades específicas.</p>
             
-            <div class="service-cards-container">
-                <div class="service-card">
-                    <img src="img/pcensamble.jpg" alt="Servicio PCs" class="card-img">
-                    <h3>Ensambles de PCs</h3>
-                    <p>Armado de equipos corporativos y personales de alto rendimiento. Totalmente personalizable.</p>
-                    <a href="detalle-servicio.html" class="nav-button">Ver Detalles</a>
+            <div class="service-cards-container" id="service-cards-container">
                 </div>
-                <div class="service-card">
-                    <img src="img/consola.jpg" alt="Consolas Retro" class="card-img">
-                    <h3>Consolas Retro Mini</h3>
-                    <p>Diseño y venta de consolas compactas con emulación de juegos clásicos.</p>
-                    <a href="detalle-consolas-retro.html" class="nav-button">Ver Detalles</a>
-                </div>
-                <div class="service-card">
-                    <img src="img/servidor.jpg" alt="Servidores" class="card-img">
-                    <h3>Servidores para el Hogar</h3>
-                    <p>Configuración de servidores domésticos para almacenamiento, backups y automatización.</p>
-                    <a href="detalle-servidores-hogar.html" class="nav-button">Ver Detalles</a>
-                </div>
-                <div class="service-card">
-                    <img src="img/desarrollo.jpg" alt="Desarrollo Web" class="card-img">
-                    <h3>Desarrollo Web</h3>
-                    <p>Creación de páginas web profesionales para negocios y emprendimientos.</p>
-                    <a href="detalle-desarrollo-web.html" class="nav-button">Ver Detalles</a>
-                </div>
-            </div>
+
         </section>
     </main>
 
